minor report changes

--- a/report/barbuddyreport.tex
+++ b/report/barbuddyreport.tex
@@ -76,8 +76,8 @@ The Beaglebone proof of concept software consists mostly of a rough version of t
 Hardware validation was performed on the major subsystems before the untimely death of the WiPy host. The eagle rendering, and actual board are shown in Figure \ref{fig:board}
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[width=0.4\textwidth]{figures/board.png}
-\includegraphics[width=0.4\textwidth]{figures/board.png}
+\includegraphics[width=0.4\textwidth]{figures/board.png}\\
+\includegraphics[width=0.4\textwidth, angle=270]{figures/IMG_3284.JPG}
 \caption{Top of board: rendered and actual.}
 \label{fig:board}
 \end{center}
@@ -176,6 +176,7 @@ Moving forward the data collection routine will be updated to support whatever p
 \label{sec:schematic}
 \includepdf{figures/barbuddy.pdf}
 \section{Code}
+Code can be found at \url{https://github.com/cliffbraun/barbuddy}
 %\subsection{}
 
 
